# saftladen

./: .gitignore  .gitmodules  README.md
design/: db.vpp  scanner.vpp
libsl/: libsl.py  test.py
mandelpresse/: Interface.hs  Main.hs  REST.hs  Types.hs  mandelpresse.cabal
sldb/: examples.sql  structure.sql
slrest/: .gitignore  Tonic  composer.json  conf.inc.template  index.php  lsyncd.lua.template
slrest/Slrest/: Product.php  ProductCollectionResource.php  ProductResource.php  ResourceBase.php  Transaction.php  TransactionCollectionResource.php  TransactionResource.php  User.php  UserCollectionResource.php  UserResource.php
slrest/htdocs/: Tonic
slsd/: aux.py  conf.py  daemon.py  libsl.py  log.py  pluginloader.py  route.py  scan.py  scanhandler.py  sh.py  slsd  slsd.service  slsd.xml.template
slsd/handler/: debug.py  exec.py  mpd.py  sl.py
slsd/misc/: ev.c  testexec.sh
slsd/scanner/: serialscan.py  stdin.py
slut/: slut  slut.conf  slut.py  slut.service
