name: mandelpresse
author: Hendrik v. Raven
cabal-version: >= 1.6.0
build-type: Simple
version: 0.1.0

executable mandelpresse
  main-is: Main.hs
  ghc-options: -threaded
  build-depends:
    base,
    aeson,
    text,
    bytestring,
    http-conduit,
    transformers,
    unordered-containers,
    http-types,
    vty,
    vty-ui,
    data-default
